@@ -9,6 +9,15 @@
 
  Changes between 1.1.1c and 1.1.1d [xx XXX xxxx]
 
+   *) Early start up entropy quality from the DEVRANDOM seed source has been
+      improved for older Linux systems.  The RAND subsystem will wait for
+      /dev/random to be producing output before seeding from /dev/urandom.
+      The seeded state is stored for future library initialisations using
+      a system global shared memory segment.  The shared memory identifier
+      can be configured by defining OSSL_SHM_SEEDED to the desired value.
+      The default identifier is 114.
+      [Paul Dale]
+
   *) Correct the extended master secret constant on EBCDIC systems. Without this
      fix TLS connections between an EBCDIC system and a non-EBCDIC system that
      negotiate EMS will fail. Unfortunately this also means that TLS connections
